fixed alignment for header in EventList Table

--- a/src/assets/scss/pages/conferenceroombooking/eventlist/_eventlist.scss
+++ b/src/assets/scss/pages/conferenceroombooking/eventlist/_eventlist.scss
@@ -5,3 +5,11 @@
 .event-list-search {
   padding-top: 1.7rem;
 }
+
+.buttons-events {
+  min-width: 104px;
+}
+
+.headings-align tr th {
+  text-align: center;
+}
